Reading dialogues from CSV file to database works

--- a/nndial/local_config.ini
+++ b/nndial/local_config.ini
@@ -3,4 +3,4 @@ host: localhost
 port: 27017
 
 [environment]
-data_directory: "/Users/shillmann/Documents/git/nn-on-dialogues"
+data_directory: /Users/shillmann/Documents/git/nn-on-dialogues
